# vr360action

./: Cargo.toml  README.md  dev.yml  dockerbuild.sh
service/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  dockerbuild.cmd
service/migrations/: 20241001132431_init.sql
service/src/: client.rs  host.rs  main.rs
service/src/driver/: driver.rs
service/src/error/: mod.rs
service/src/model/: request.rs  response.rs
service/src/repo/: pc.rs
service/src/wmi/: model.rs  wmi.rs
src/: client.rs  host.rs  main.rs  server.rs
src/driver/: driver.rs
src/model/: request.rs
src/wmi/: model.rs  wmi.rs
webserver/: Cargo.toml
webserver/src/: app_state.rs  lib.rs  main.rs  pc_route.rs  user_error.rs
webserver/src/repo/: base.rs
